# Workshop_RiojaDotNet

./: .gitmodules  .travis.yml  CMakeLists.txt  PostNetCoreNativo.sln  appveyor.yml  azure-pipelines.yml  readme.md  sonar-project.properties
examples/average/: average_example.cpp
examples/select/: select_example.cpp
examples/sum/: sum_example.cpp
examples/where/: CMakeLists.txt  where_example.cpp
src/C++ Library/: Nativo.cpp
src/PostNetCoreNativo/: NativeMethods.cs  Program.cs
test/MathTests/: MathTests.csproj
test/NativeMehotdsTests/: NativeMehotdsTests.csproj  UnitTest1.cs
